[project]
name = "jr-py-writer"
version = "0.1.0"
description = "A file writer for asynchronous logging class for Python."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]

keywords = [
    "thread-safe",
    "concurrency",
    "threadpool",
    "threading",
    "logger",
    "logging",
    "file",
    "writing",
    "python",
    "asynchronous",
    "asyncio",
    "file writer",
]

dependencies = [
    "black>=25.1.0",
    "pyaml",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "psutil",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jr_py_writer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests_*.py"]
addopts = "-v -s -W default --benchmark-enable --benchmark-json=test/benchmark_json/my_benchmark.json " 
benchmark_disable = "data"